--- a/apps/licenciamentos/templates/licenciamentos/verifica_doc_licenciamento.html
+++ b/apps/licenciamentos/templates/licenciamentos/verifica_doc_licenciamento.html
@@ -25,44 +25,45 @@ Listagem de Tipologias
                     </div>
                     <div class="card-body">
                         <div class="card-body">
+<!--                            <div class="p-3 mb-2 bg-light text-dark">-->
+<!--                                <div class="row">-->
+<!--                                    <div class="col-md-12">-->
+<!--                                        {{ form.subgrupo.errors }}-->
+<!--                                        <label for="{{ form.subgrupo.id_for_label }}"><strong>Subgrupo:</strong></label>-->
+<!--                                        {{ form.subgrupo | add_class:"form-control"|attr:"autofocus" }}-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
                             <div class="p-3 mb-2 bg-light text-dark">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        {{ form.subgrupo.errors }}
-                                        <label for="{{ form.subgrupo.id_for_label }}"><strong>Subgrupo:</strong></label>
-                                        {{ form.subgrupo | add_class:"form-control"|attr:"autofocus" }}
+                                        {{ form.tipologia.errors }}
+                                        <label for="{{ form.tipologia.id_for_label }}"><strong>Tipologia:</strong></label>
+                                        {{ form.tipologia | add_class:"form-control"|attr:"autofocus" }}
                                     </div>
+<!--                                    <div class="col-md-10">-->
+<!--                                        {{ form.descricao.errors }}-->
+<!--                                        <label for="{{ form.descricao.id_for_label }}"><strong>Descrição:</strong></label>-->
+<!--                                        {{ form.descricao | add_class:"form-control" }}-->
+<!--                                    </div>-->
                                 </div>
                             </div>
                             <div class="p-3 mb-2 bg-light text-dark">
                                 <div class="row">
-                                    <div class="col-md-2">
-                                        {{ form.codigo.errors }}
-                                        <label for="{{ form.codigo.id_for_label }}"><strong>Código:</strong></label>
-                                        {{ form.codigo | add_class:"form-control"|attr:"autofocus" }}
-                                    </div>
-                                    <div class="col-md-10">
-                                        {{ form.descricao.errors }}
-                                        <label for="{{ form.descricao.id_for_label }}"><strong>Descrição:</strong></label>
-                                        {{ form.descricao | add_class:"form-control" }}
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="p-3 mb-2 bg-light text-dark">
-                                <div class="row">
-                                    <div class="col-md-10">
+                                    <div class="col-md-4">
                                         {{ form.und_medida_desc.errors }}
                                         <label for="{{ form.und_medida_desc.id_for_label }}"><strong>Unidade de Medida:</strong></label>
                                         {{ form.und_medida_desc | add_class:"form-control"|attr:"autofocus" }}
                                     </div>
-                                    <div class="col-md-2">
+                                    <div class="col-md-4">
                                         {{ form.p_poluidor.errors }}
                                         <label for="{{ form.p_poluidor.id_for_label }}"><strong>Potencial Poluidor:</strong></label>
                                         {{ form.p_poluidor | add_class:"form-control"|attr:"autofocus" }}
                                     </div>
-                                    <div class="col-md-2">
-                                        <label for="valor">Valor</label>
-                                        <input type="number" class="form-control" id="valor">
+                                    <div class="col-md-4">
+                                        {{ form.valor.errors }}
+                                        <label for="{{ form.valor.id_for_label }}"><strong> Valor:</strong></label>
+                                        {{ form.valor | add_class:"form-control"|attr:"autofocus" }}
                                     </div>
                                 </div>
                             </div>
